--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_rounded_date_picker: ^1.0.4
   intl: ^0.16.1
   floor: ^0.12.0
+  sqflite: ^1.3.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
